--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ Django==2.2.10
 django-bootstrap-breadcrumbs==0.9.2
 django-bootstrap4==1.1.1
 django-registration==3.1
-django-tables2==2.2.1
+django-select2==7.2.3
+django-tables2==2.3.0
 django-tables2-bootstrap4==2.0.0b5
+
 
 pytz==2019.3
 psycopg2==2.8.4
