--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-tables2==2.2.1
 django-tables2-bootstrap4==2.0.0b5
 
 pytz==2019.3
+chardet==3.0.4
 psycopg2==2.8.4
 git+git://github.com/SlavaSkvortsov/django-calendarium@v1.0
