--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==3.1
 django-bootstrap-breadcrumbs==0.9.2
 django-bootstrap4==2.2.0
 django-registration==3.1
+django-select2==7.4.2
 django-tables2==2.3.1
 django-tables2-bootstrap4==2.0.0b5
 
