--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-registration==3.1
 django-select2==7.4.2
 django-tables2==2.3.1
 django-tables2-bootstrap4==2.0.0b5
+django-debug-toolbar==2.2
 
 pytz==2020.1
 chardet==3.0.4
